--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -2,8 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer root {
+@layer utilities {
+  @layer components {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
+
+@layer base {
   body {
     @apply bg-[#E1DBD6];
+  }
+
+  html {
+    --scroll-behavior: smooth !important;
+    scroll-behavior: smooth !important;
   }
 }
